--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -23,7 +23,7 @@
 .footer {
     width: 100%;
     height: 45px;
-    font-size: 1vw;
+    font-size: 20px;
     color: white;
     background-color: #34418f;
     display: flex;
@@ -35,16 +35,11 @@
 .header_section {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
-.header_item {
-    font-size: 1.2vw;
-    padding-block: 0.5vw;
-    padding-inline: 0.8vw;
-}
-
-.header_main_item {
-    font-size: 1.5vw;
+.mainLink {
+    font-size: 24px;
     font-weight: 600;
     padding-block: 0.5vw;
     padding-inline: 0.8vw;
@@ -54,12 +49,46 @@
 .link {
     color: rgb(255, 255, 255);
     text-decoration: none;
+    font-size: 20px;
+    padding-block: 0.5vw;
+    padding-inline: 0.8vw;
+  }
+
+  .profileLink {
+    display: block;
   }
   
 .link:hover {
     background-color: #e1def4;
     color: black;
     border-radius: 0.2vw;
+  }
+
+  @media (max-width: 1200px) {
+    .mainLink {
+        font-size: 20px;
+      }
+    .link {
+        font-size: 17px;
+      }
+    .footer { 
+        font-size: 17px;
+    }
+  }
+
+  @media (max-width: 900px) {
+    .mainLink {
+        font-size: 20px;
+      }
+    .link {
+        display: none;
+      }
+    .profileLink {
+        display: block;
+    }
+    .footer { 
+        font-size: 15px;
+    }
   }
 
 .map {
@@ -86,5 +115,32 @@
 }
 
 .menu {
-    width: 100px;
+  max-height: 0;
+  background: white;
+  position: absolute;
+  overflow: hidden;
+  top: 70px;
+  right: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  float: none;
+  z-index: 3;
+  transition: .5s ease-in-out;
+}
+
+.menuActive {
+  max-height: 150px;
+}
+
+.menu li {
+  text-align: center;
+  border-bottom: 1px solid #EBEBE3;
+  margin-right: 0;
+  line-height: 40px;
+}
+
+.menu li a {
+  display: block;
+  color:#34418f;
 }
