--- a/src/components/noticesUser/style.module.css
+++ b/src/components/noticesUser/style.module.css
@@ -6,6 +6,10 @@
   'aa ab ac ';
 }
 
+.conteiner {
+  width: 100%;
+}
+
 .item1 {
   grid-area: aa;
 }
@@ -50,7 +54,7 @@
   }
 
   .button:hover {
-    box-shadow: 0px 0px 0px 3px rgb(184, 231, 254);
+    box-shadow: 0px 0px 0px 3px rgb(158, 208, 240);;
   }
 
   .filterIcon {
@@ -90,7 +94,7 @@
   }
 
   .button2:hover {
-    box-shadow: 0px 0px 0px 3px rgb(184, 231, 254);
+    box-shadow: 0px 0px 0px 3px rgb(158, 208, 240);;
   }
 
   .buttonsConteiner {
