--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
 }
-
+ 
 .header {
     display: flex;
     justify-content: space-between;
@@ -16,7 +16,7 @@
 }
 
 .main {
-    flex: 1 0 auto;
+    flex: 1;
     position: relative;
 }
 
@@ -30,6 +30,7 @@
     align-items: center;
     border-top: 1px solid #BFC4C9;
     justify-content: center;
+    text-align: center;
 }
 
 .header_section {
