--- a/src/components/noticesUser/sidemenu.module.css
+++ b/src/components/noticesUser/sidemenu.module.css
@@ -29,7 +29,7 @@
   
   }
   .btn3:hover, .btn3:focus {
-    background-color: rgb(137, 193, 228);
+    background-color: rgb(158, 208, 240);;
     border-radius: 10%;
   }
   .btn3 img {
