adaptive layout changes

--- a/src/components/noticesUser/style.module.css
+++ b/src/components/noticesUser/style.module.css
@@ -1,108 +1,48 @@
 .container {
   display: grid;
   gap: 10px;
-  padding: 10px; 
-  grid-template-areas:
-  'aa ab ac ';
+  padding: 10px;
+  grid-template-areas: "aa ab ac ";
 }
 
-.conteiner {
-  width: 100%;
-}
-
-.item1 {
-  grid-area: aa;
-}
-.item2 {
-  grid-area: ab;
-  gap: 10px;
-
-} 
-.item3 {
-  grid-area: ac;
-
-} 
-
-.noticesConteiner {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 5vh;
-}
-
-.p {
-    font-style: italic;
-}
-
-.typography {
-    margin-bottom: 10px !important;
+.defaultContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .button {
-    margin-top: 10px;
-    
-    height: 40px;
-    width: 840px;
-    border-radius: 0.5vw;
-    font-size: 16px;
-    border: 0ch;
-    cursor: pointer;
-    color: #fff;
-    background-color: #437db6;
-  }
-
-  .button:hover {
-    box-shadow: 0px 0px 0px 3px rgb(158, 208, 240);;
-  }
-
-  .filterIcon {
-    width: 40px !important;
-    height: 40px !important;
-  }
-
-  .dateConteiner {
-    
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-.date {
-    margin: 10px;
+  width: 100%;
+  background-color: #34418f;
 }
 
-.conteinerDialog {
+.button:hover {
+  background-color: #3e4ea8;
+  box-shadow: 0px 0px 0px 2px #3e4ea8;
+}
 
-    display: flex;
+.filterIcon {
+  width: 40px;
+  height: 40px;
+  color: aliceblue;
+}
+
+.buttonForFilter {
+  margin: 10px;
+  height: 40px;
+  width: 200px;
+ 
+  font-size: 15px;
+  background-color: #34418f;
+}
+
+.buttonForFilter:hover {
+  background-color: #3e4ea8;
+  box-shadow: 0px 0px 0px 1px #3e4ea8;
+}
+
+@media (max-width: 570px) {
+  .defaultContainer {
     flex-direction: column;
-    align-items: center;
-
-}
-
-.button2 {
-    margin: 10px;
-    height: 40px;
-    width: 200px;
-    border-radius: 0.5vw;
-    font-size: 16px;
-    border: 0ch;
-    cursor: pointer;
-    color: #fff;
-    background-color: #437db6;
   }
-
-  .button2:hover {
-    box-shadow: 0px 0px 0px 3px rgb(158, 208, 240);;
-  }
-
-  .buttonsConteiner {
-    display: flex;
-    justify-content: center;
-  }
-
-  .form {
-    display: flex;
-    flex-flow: column;
 }
