--- a/src/components/waterLevels/levelsGu/style.module.css
+++ b/src/components/waterLevels/levelsGu/style.module.css
@@ -21,3 +21,12 @@
     width: 40vw;
     height: 40vh;
 }
+
+@media (max-width: 900px) {
+    .container {
+      flex-direction: column;
+    }
+    .element {
+        width: 100%;
+    }
+}
