--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    align-items: center;
     padding: 5px;
     border: none;
     box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
