--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,7 +1,7 @@
 .conteiner {
-    min-height: 100%;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
  
 .header {
@@ -19,6 +19,7 @@
 .main {
     flex: 1;
     position: relative;
+    height: 100%;
 }
 
 .footer {
