--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -1,20 +1,16 @@
-.container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  padding-top: 10%;
-}
-
 .input {
   padding: 5px;
 }
 
 .form {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-flow: column;
   align-items: center;
-  width: 100%;
+  justify-content: center;
+  padding-bottom: 200px;
 }
 
 .button {
