--- a/src/components/noticesUser/style.module.css
+++ b/src/components/noticesUser/style.module.css
@@ -1,8 +1,42 @@
 .container {
   display: grid;
+  width: 100%;
   gap: 10px;
   padding: 10px;
-  grid-template-areas: "aa ab ac ";
+  grid-template-columns: 1fr 2.7fr 1fr; 
+  grid-template-rows: 320px 360px;
+  grid-template-areas: 
+    "item1 item3 item4"
+    "item2 item3 item5";
+}
+
+.item1,
+.item2,
+.item4,
+.item5 {
+display: flex;
+align-items: start;
+justify-content: center;
+}
+
+.item1 {
+grid-area: item1;
+}
+
+.item2 {
+grid-area: item2;
+}
+
+.item3 {
+  grid-area: item3;
+}
+
+.item4 {
+grid-area: item4;
+}
+
+.item5 {
+grid-area: item5;
 }
 
 .defaultContainer {
@@ -11,14 +45,28 @@
   justify-content: space-between;
 }
 
-.button {
+.btnFilter {
   width: 100%;
   background-color: #34418f;
 }
 
-.button:hover {
+.btnFilter:hover {
   background-color: #3e4ea8;
   box-shadow: 0px 0px 0px 2px #3e4ea8;
+}
+
+.btn{
+  background-color:white;
+  border: none;
+  cursor: pointer;
+  padding: 30px;
+  font-size: 23px;
+  width: 270px;
+}
+
+.btn:hover {
+  background-color: rgb(158, 208, 240);
+  border-radius: 10%;
 }
 
 .filterIcon {
@@ -44,5 +92,78 @@
 @media (max-width: 570px) {
   .defaultContainer {
     flex-direction: column;
+  }
+}
+
+@media (max-width: 1300px) {
+  .container {
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+      "item3 item3"
+      "item1 item2"
+      "item4 item5";
+  }
+
+  .item1 {
+    justify-self: end;
+  }
+
+  .item2 {
+    justify-self: start;
+  }
+
+  .item4 {
+    justify-self: end;
+  }
+
+  .item5 {
+    justify-self: start;
+  }
+
+  .item3 {
+    display: flex;
+    padding-left: 50px;
+    padding-right: 50px;
+    align-items: center;
+  }
+
+  .btn{
+    background-color:white;
+    font-size: 22px;
+    width: 260px;
+  }
+}
+
+@media (max-width: 600px) {
+  .container {
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+      "item3"
+      "item1"
+      "item2"
+      "item4"
+      "item5";
+  }
+
+  .item1,
+  .item2,
+  .item4,
+  .item5 {
+    justify-self: center;
+  }
+
+  .item3 {
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+    align-items: center;
+  }
+
+  .btn{
+    background-color:white;
+    font-size: 22px;
+    width: 260px;
   }
 }
