--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -14,5 +14,14 @@
 }
 
 .button {
-  width: 130px;
+  margin: 10px;
+  height: 40px;
+  width: 160px;
+  font-size: 15px;
+  background-color: #34418f;
+}
+
+.button:hover {
+  background-color: #3e4ea8;
+  box-shadow: 0px 0px 0px 1px #3e4ea8;
 }
