--- a/src/components/waterLevels/levelsMenu.css
+++ b/src/components/waterLevels/levelsMenu.css
@@ -1,149 +1,58 @@
-.content1234 {
-  padding: 30px;
- display: grid;
- /* grid-gap: 2em 20px; */
- /* grid-template-columns: repeat(7, 5fr); */
- grid-template-areas:
-  'a b';
-  justify-content: center;
-
-
-}
-.content1234 a {
+.container {
   color: black;
-  padding: 12px 16px;
   text-decoration: none;  
-  display: block;
-  font-size: 25px;
+  display: flex;
+  flex-flow: row wrap;
+  padding-top: 10%;
+  justify-content: center;
 }
-.btn3{
+
+.btn{
   background-color:white;
-  color: white;
-  padding: 3px;
-  font-size: 15px;
   border: none;
   cursor: pointer;
-
+  padding: 30px;
+  font-size: 22px;
+  width: 300px;
+  align-self: center;
 }
-.btn3:hover, .btn3:focus {
-  background-color: rgb(87, 158, 196);
+
+.btn:hover {
+  background-color: rgb(158, 208, 240);
   border-radius: 10%;
 }
-.btn3 img {
- width: 200px;
- height: 200px;
- border-radius: 10%;
+
+@media (max-width: 1600px) {
+  .btn {
+    width: 300px;
+    font-size: 22px;
+  }
+ 
 }
-.item5 {
-grid-area: a;
-}
-.item6 {
-grid-area: b;
-}
-.item7 {
-grid-area: c;
-}
-.item8 {
-grid-area: d;
-}
-.item9 {
-grid-area: e;
-}
-.item10 {
-grid-area: f;
-}
-.item11 {
-grid-area: g;
-}
-.item12 {
-grid-area: h;
-}
-@media screen and (max-width: 1440px) {
-  .content1234 {
-    display: grid;
-    /* grid-template-columns: repeat(3, 100px); */
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    /* align-self: center;
-    justify-self: center; */
-    justify-content: center;
-    grid-template-areas:
-    ". a b c"
-    ". d . .";
+
+/* @media (max-width: 1300px) {
+  .btn {
+    width: 280px;
+    font-size: 23 px;
+  }
+} */
+
+@media (max-width: 900px) {
+  .container {
+    padding-top: 20%;
+  }
+  .btn {
+    font-size: 23px;
   }
 }
-@media screen and (max-width: 1024px) {
-.content1234 {
-  display: grid;
-  /* grid-template-columns: repeat(3, 100px); */
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  /* align-self: center;
-  justify-self: center; */
-  justify-content: center;
-  grid-template-areas:
-  ". a b c"
-  ". d d ."
-  ". e f g"
-  ". h h .";
-}
-.content1234 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;  
-  display: block;
-  font-size: 20px;
-}
-.btn3 img {
-  width: 240px;
-  height: 240px;
-  border-radius: 10%;
-}
-}
-@media screen and (max-width: 980px) {
 
-.content1234 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;  
-  display: block;
-  font-size: 20px;
-}
-.btn3 img {
-  width: 150px;
-  height: 150px;
-  border-radius: 10%;
-}
-}
-@media screen and (max-width: 425px) {
-.content1234 {
-    display: grid;
-    /* grid-template-columns: repeat(3, 100px); */
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    /* align-self: center;
-    justify-self: center; */
-    justify-content: center;
-    grid-template-areas:
-    ". a a ."
-    ". b b ."
-    ". c c ."
-    ". d d ."
-    ". e e ."
-    ". f f ."
-    ". g g ."
-    ". h h .";
- }
-.content1234 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;  
-  display: block;
-  font-size: 20px;
-}
-.btn3 img {
-  width: 200px;
-  height: 200px;
-  border-radius: 10%;
-}
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+    padding-top: 10%;
+  }
+  .btn {
+    width: 260px;
+    font-size: 21px;
+  }
 }
