--- a/src/components/noticesUser/style.module.css
+++ b/src/components/noticesUser/style.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   gap: 10px;
   padding: 10px;
+  padding-top: 50px;
   grid-template-columns: 1fr 2.7fr 1fr; 
   grid-template-rows: 320px 360px;
   grid-template-areas: 
