--- a/src/components/sib/style.module.css
+++ b/src/components/sib/style.module.css
@@ -18,7 +18,7 @@
   margin-bottom: 50px;
   width: 70vw;
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
