add client page

--- a/src/components/admin/style.module.css
+++ b/src/components/admin/style.module.css
@@ -27,8 +27,8 @@
 
 
   .appBar {
-    background-color: #487fb6 !important;
-    color: white !important;
+    background-color: #487fb6;
+    color: white;
   }
 
   .MuiDataGrid {
