some fixes and admin-client page

--- a/src/components/admin/users/style.module.css
+++ b/src/components/admin/users/style.module.css
@@ -18,16 +18,11 @@
 
 .tableContainer {
   display: flex;
-  flex-flow: column;
-  align-items: center;
-  width: 100%;
+  width: 600px;
 }
 
 .containerClients {
-  width: 70%;
-  height: 100%;
   display: flex;
-  
-  justify-content: center;
-  align-items: center;
+  padding-top: 30px;
+  width: 600px;
 }
