--- a/src/components/sib/style.module.css
+++ b/src/components/sib/style.module.css
@@ -5,7 +5,8 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
+  text-align: center;
+  line-height: 1;
 }
 
 .button {
