--- a/src/components/noticesUser/style.module.css
+++ b/src/components/noticesUser/style.module.css
@@ -4,9 +4,9 @@
   gap: 10px;
   padding: 10px;
   padding-top: 50px;
-  grid-template-columns: 1fr 2.7fr 1fr; 
-  grid-template-rows: auto; 
-  grid-template-areas: 
+  grid-template-columns: 1fr 2.7fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas:
     "item1 item3 item4"
     "item2 item3 item5"
     ". item3 .";
@@ -16,17 +16,17 @@
 .item2,
 .item4,
 .item5 {
-display: flex;
-align-items: start;
-justify-content: center;
+  display: flex;
+  align-items: start;
+  justify-content: center;
 }
 
 .item1 {
-grid-area: item1;
+  grid-area: item1;
 }
 
 .item2 {
-grid-area: item2;
+  grid-area: item2;
 }
 
 .item3 {
@@ -35,11 +35,11 @@ grid-area: item2;
 }
 
 .item4 {
-grid-area: item4;
+  grid-area: item4;
 }
 
 .item5 {
-grid-area: item5;
+  grid-area: item5;
 }
 
 .defaultContainer {
@@ -58,8 +58,8 @@ grid-area: item5;
   box-shadow: 0px 0px 0px 2px #3e4ea8;
 }
 
-.btn{
-  background-color:white;
+.btn {
+  background-color: white;
   border: none;
   cursor: pointer;
   padding: 30px;
@@ -82,7 +82,7 @@ grid-area: item5;
   margin: 10px;
   height: 40px;
   width: 200px;
- 
+
   font-size: 15px;
   background-color: #34418f;
 }
@@ -90,6 +90,18 @@ grid-area: item5;
 .buttonForFilter:hover {
   background-color: #3e4ea8;
   box-shadow: 0px 0px 0px 1px #3e4ea8;
+}
+
+.pagination {
+  padding-top: 12px;
+  display: flex;
+  justify-content: end;
+}
+
+.pagination ul {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
 }
 
 @media (max-width: 570px) {
@@ -100,9 +112,9 @@ grid-area: item5;
 
 @media (max-width: 1300px) {
   .container {
-    grid-template-columns: 1fr 1fr; 
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
-    grid-template-areas: 
+    grid-template-areas:
       "item3 item3"
       "item1 item2"
       "item4 item5";
@@ -132,8 +144,8 @@ grid-area: item5;
     padding-bottom: 0px;
   }
 
-  .btn{
-    background-color:white;
+  .btn {
+    background-color: white;
     font-size: 22px;
     width: 260px;
   }
@@ -143,7 +155,7 @@ grid-area: item5;
   .container {
     grid-template-columns: auto;
     grid-template-rows: auto auto;
-    grid-template-areas: 
+    grid-template-areas:
       "item3"
       "item1"
       "item2"
@@ -165,8 +177,8 @@ grid-area: item5;
     align-items: center;
   }
 
-  .btn{
-    background-color:white;
+  .btn {
+    background-color: white;
     font-size: 22px;
     width: 260px;
   }
