--- a/src/components/admin/map/style.module.css
+++ b/src/components/admin/map/style.module.css
@@ -1,2 +1,10 @@
-
-
+.container {
+    display: flex;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+  }
+  .map{
+    width: 100%;
+    height: 100%;
+  }
