--- a/src/components/admin/map/style.module.css
+++ b/src/components/admin/map/style.module.css
@@ -1,8 +1,10 @@
 .container {
     display: flex;
-    position: relative;
+    position: absolute;
     height: 100%;
     width: 100%;
+    margin-top: -55px;
+    margin-left: -50px;
   }
   .map{
     width: 100%;
