--- a/src/components/admin/notice/style.module.css
+++ b/src/components/admin/notice/style.module.css
@@ -6,12 +6,26 @@
 .form {
   display: flex;
   flex-flow: column;
-  margin: 15px;
-
+  width: 100%;
+  max-width: 700px;
 }
 
 .accordionDetails {
   display: flex;
   flex-flow: column;
   align-items: center;
+  overflow: hidden;
+}
+
+.button {
+  margin: 10px;
+  height: 40px;
+  width: 200px;
+  font-size: 15px;
+  background-color: #34418f;
+}
+
+.button:hover {
+  background-color: #3e4ea8;
+  box-shadow: 0px 0px 0px 1px #3e4ea8;
 }
