--- a/src/components/admin/map/style.module.css
+++ b/src/components/admin/map/style.module.css
@@ -1,12 +1,39 @@
 .container {
-    display: flex;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    margin-top: -55px;
-    margin-left: -50px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.mapPart {
+  width: 70%;
+  height: 100%;
+}
+
+.infoPart {
+  width: 30%;
+  overflow: auto;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.map {
+  height: 100%;
+  width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    flex-direction: column;
   }
-  .map{
+  .infoPart {
     width: 100%;
-    height: 100%;
+    height: 35%;
   }
+  .mapPart {
+    width: 100%;
+    height: 65%;
+  }
+}
