--- a/src/components/admin/map/style.module.css
+++ b/src/components/admin/map/style.module.css
@@ -24,9 +24,26 @@
   width: 100%;
 }
 
+.typography {
+  margin-right: auto;
+}
+
+.table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.table td {
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+}
+
 @media (max-width: 1200px) {
   .container {
     flex-direction: column;
+    align-items: center;
   }
   .infoPart {
     width: 100%;
