--- a/src/components/admin/map/style.module.css
+++ b/src/components/admin/map/style.module.css
@@ -6,12 +6,12 @@
 }
 
 .mapPart {
-  width: 65%;
+  width: 62%;
   height: 100%;
 }
 
 .infoPart {
-  width: 35%;
+  width: 38%;
   overflow: auto;
   padding: 10px;
   display: flex;
@@ -26,18 +26,33 @@
 
 .typography {
   margin-right: auto;
+  text-align: justify;
 }
 
 .table {
   border-collapse: collapse;
   width: 100%;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .table td {
   border: 1px solid black;
   padding: 5px;
   text-align: center;
+}
+
+.button {
+  margin: 10px;
+  height: 40px;
+  width: 150px;
+  font-size: 15px;
+  background-color: #34418f;
+}
+
+.button:hover {
+  background-color: #3e4ea8;
+  box-shadow: 0px 0px 0px 1px #3e4ea8;
 }
 
 @media (max-width: 1200px) {
