--- a/src/components/noticesUser/style.module.css
+++ b/src/components/noticesUser/style.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   gap: 10px;
   padding: 10px;
-  padding-top: 50px;
+  padding-top: 25px;
   grid-template-columns: 1fr 2.7fr 1fr;
   grid-template-rows: auto;
   grid-template-areas:
@@ -31,7 +31,7 @@
 
 .item3 {
   grid-area: item3;
-  padding-bottom: 50px;
+  padding-bottom: 25px;
 }
 
 .item4 {
@@ -151,7 +151,7 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 300) {
   .container {
     grid-template-columns: auto;
     grid-template-rows: auto auto;
