--- a/src/components/noticesUser/style.module.css
+++ b/src/components/noticesUser/style.module.css
@@ -1,8 +1,6 @@
 .container {
   display: grid;
   width: 100%;
-  gap: 10px;
-  padding: 10px;
   padding-top: 25px;
   grid-template-columns: 1fr 2.7fr 1fr;
   grid-template-rows: auto;
@@ -62,7 +60,7 @@
   background-color: white;
   border: none;
   cursor: pointer;
-  padding: 30px;
+  padding: 35px;
   font-size: 23px;
   width: 270px;
 }
@@ -95,7 +93,7 @@
 .pagination {
   padding-top: 12px;
   display: flex;
-  justify-content: end;
+  justify-content: center;
 }
 
 .pagination ul {
@@ -146,12 +144,12 @@
 
   .btn {
     background-color: white;
-    font-size: 22px;
-    width: 260px;
+    font-size: 16px;
+    width: 200px;
   }
 }
 
-@media (max-width: 300) {
+@media (max-width: 400) {
   .container {
     grid-template-columns: auto;
     grid-template-rows: auto auto;
@@ -179,7 +177,7 @@
 
   .btn {
     background-color: white;
-    font-size: 22px;
+    font-size: 20px;
     width: 260px;
   }
 }
