--- a/src/components/noticesUser/style.module.css
+++ b/src/components/noticesUser/style.module.css
@@ -1,56 +1,3 @@
-.container {
-  display: grid;
-  width: 100%;
-  padding-top: 25px;
-  grid-template-columns: 1fr 2.7fr 1fr;
-  grid-template-rows: auto;
-  grid-template-areas:
-    "item1 item3 item4 "
-    "item2 item3 item5 "
-    ". item3 .";
-}
-
-.item1,
-.item2,
-.item4,
-.item5, 
-.item6,
-.item7{
-  display: flex;
-  align-items: start;
-  justify-content: center;
-}
-
-.item1 {
-  grid-area: item1;
-}
-
-.item2 {
-  grid-area: item2;
-}
-
-.item3 {
-  grid-area: item3;
-  padding-bottom: 25px;
-}
-
-.item4 {
-  grid-area: item4;
-}
-
-.item5 {
-  grid-area: item5;
-}
-
-.row{
-  max-height: 100%;
-}
-.defaultContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .btnFilter {
   width: 100%;
   background-color: #34418f;
@@ -108,82 +55,15 @@
   flex-direction: row;
 }
 
-@media (max-width: 570px) {
-  .defaultContainer {
-    flex-direction: column;
-  }
+.FirstBlock{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (max-width: 1300px) {
-  .container {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    grid-template-areas:
-      "item3 item3"
-      "item1 item2"
-      "item4 item5";
-  }
-
-  .item1 {
-    justify-self: end;
-  }
-
-  .item2 {
-    justify-self: start;
-  }
-
-  .item4 {
-    justify-self: end;
-  }
-
-  .item5 {
-    justify-self: start;
-  }
-
-  .item3 {
-    display: flex;
-    padding-left: 50px;
-    padding-right: 50px;
-    align-items: center;
-    padding-bottom: 0px;
-  }
-
-  .btn {
-    background-color: white;
-    font-size: 16px;
-    width: 200px;
-  }
+.NoticeUser{
+  margin-bottom: 10px;
 }
-
-@media (max-width: 400) {
-  .container {
-    grid-template-columns: auto;
-    grid-template-rows: auto auto;
-    grid-template-areas:
-      "item3"
-      "item1"
-      "item2"
-      "item4"
-      "item5";
-  }
-
-  .item1,
-  .item2,
-  .item4,
-  .item5 {
-    justify-self: center;
-  }
-
-  .item3 {
-    display: flex;
-    padding-left: 10px;
-    padding-right: 10px;
-    align-items: center;
-  }
-
-  .btn {
-    background-color: white;
-    font-size: 20px;
-    width: 260px;
-  }
+.SecondColumn{
+  overflow: hidden;
 }
