--- a/src/components/waterLevels/levelsGp/style.module.css
+++ b/src/components/waterLevels/levelsGp/style.module.css
@@ -4,7 +4,18 @@
   height: 100%;
   width: 100%;
 }
-
+.tablesContainer {
+  padding: 15px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 70vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  background-color: #ebf4fc;
+}
 .element {
     width: 50%;
     height: 100%;
